# nog

./: Cargo.toml  PKGBUILD  README.md  TEST-MATRIX.md  TEST-REPORT-v1.0.md  nog.1
config/: nog.conf  tier-pins.toml
docs/: v2-explain.md
src/: aur.rs  config.rs  holds.rs  main.rs  pacman.rs  sync_db.rs  tiers.rs
src/commands/: mod.rs
testing/: 20260419 - Test Results for nog v1-0-0.md  20260513 - Test Results for nog v1-0-3.md  20260525 - Test Matrix for nog v1-0-4.md  20260525 - Test Results for nog v1-0-4.md  20260707 - Test Matrix for nog v1-0-5.md  20260708 - Test Results for nog v1-0-5.md  20260716 - Test Results for nog v1-0-6.md  20260718 - Test Results for nog v1-0-7.md  RELEASE-CHECKLIST.md
